--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
+		"sveltekit-i18n": "^2.2.2",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
