add support for i8nally

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "frontMatter.framework.startCommand": "npm run dev",
-    "frontMatter.preview.host": "http://127.0.0.1:5173",
     "[markdown]": {
     },
-    "frontMatter.content.autoUpdateDate": true
+    "i18n-ally.localesPaths": [
+        "src/lib/locales"
+    ],
+    "i18n-ally.keystyle": "flat"
 }
