--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"fluent-svelte": "^1.6.0",
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"rollup-plugin-copy": "^3.4.0",
 		"sass": "^1.55.0",
-		"svelte": "^3.44.0",
+		"svelte": "^3.52.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"sveltekit-i18n": "^2.2.2",
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"aos": "^3.0.0-beta.6",
+		"jquery": "^3.6.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.0.1"
 	}
