--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
 		"svelte-preprocess": "^4.10.7",
 		"sveltekit-i18n": "^2.2.2",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"vite-plugin-iso-import": "^0.1.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"aos": "^3.0.0-beta.6",
 		"jquery": "^3.6.1",
 		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.0.1"
+		"rehype-slug": "^5.0.1",
+		"tiny-slider": "^2.9.4"
 	}
 }
