--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"jquery": "^3.6.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.0.1",
+		"svelte-social-share": "^1.0.0",
 		"tiny-slider": "^2.9.4"
 	}
 }
